Remove extra line breaks in field models. Add licence header to MT103TextBlock.